# truncated-directory

./: Cargo.toml  README.md  justfile
src/: filesystem.rs  formatting.rs  main.rs
