# schema = "https://json.schemastore.org/cargo.json"

[package]
name = "truncated-directory"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.9"
# TODO: gix-discovery is maybe better for getting the git repo?

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
